--- a/incl/main/grafisk_losning/optimering.tex
+++ b/incl/main/grafisk_losning/optimering.tex
@@ -39,9 +39,9 @@ Så er den optimale værdi af objektfunktionen lig $- \infty$, eller også finde
 \end{thm}
 %
 \begin{proof}
-Bemærk indledningsvist, at et element $\textbf{x}$ i et polyder $P$ har $rang(k)$, hvis der findes præcis $k$ lineært uafhængige betingelser, der er aktive ved $\textbf{x}$. 
+Bemærk indledningsvist, at et element $\textbf{x}$ i et polyder $P$ har rang$(\textbf{x})=k$, hvis der findes præcis $k$ lineært uafhængige betingelser, der er aktive ved $\textbf{x}$. 
 Antag, at den optimale værdi af objektfunktionen er endelig. \\
-Lad et polyeder $P = \{\textbf{x} \in \R^n | \textbf{A}\textbf{x} \geq \textbf{b} \}$ og bemærk, at $\textbf{x} \in P$, hvor $\textbf{x}$ har $rang(k)$, $k < n$. 
+Lad et polyeder $P = \{\textbf{x} \in \R^n | \textbf{A}\textbf{x} \geq \textbf{b} \}$ og bemærk, at $\textbf{x} \in P$, hvor $\textbf{x}$ har rang$(\textbf{x})=k$, $k < n$. 
 Lad $i = \{ i | \textbf{a}^T_i \textbf{x} = b_i \}$, hvor $\textbf{a}^T_i$ er den $i$'te række af $A$. 
 Da $k < n$, ligger vektorerne $\textbf{a}_i$, $i \in I$, i et ægte underrum af $ \R^n$, og der kan vælges en ikke-nul vektor $\textbf{d} \in \R$, som er ortogonal til hver $\textbf{a}_i$. 
 Det kan desuden antages, at $\textbf{c}^T \textbf{d} \leq \textbf{0}$, ved muligvis at tage negationen af $\textbf{d}$. \\
@@ -60,9 +60,9 @@ Som før haves nu igen en vektor $\textbf{y}$, hvis rang er højere end rangen a
 Da $\textbf{c}^T \textbf{d} = 0$, haves desuden, at $\textbf{c}^T \textbf{y} = \textbf{c}^T \textbf{x}$. 
 Det er nu vist, at der i begge tilfælde findes et punkt $\textbf{y}$ med højere rang end $\textbf{x}$, således $\textbf{c}^T \textbf{y} \leq \textbf{c}^T \textbf{x}$. 
 Antag, at denne proces nu fortsættes.
-Så findes en vektor $w$ med $rang(n)$, hvormed den er en basal mulig løsning, således at $\textbf{c}^T \textbf{w} \leq \textbf{c}^T \textbf{x}$. 
-Lad $w_1, w_2, \ldots , w_r$ være de basale mulige løsninger i $P$, og lad $w^*$ være en basal mulig løsning, således at $\textbf{c}^T \textbf{w}^* \leq \textbf{c}^T \textbf{w}_i$ for alle $i$. 
-Eftersom der for alle $x$ findes et $i$, således at $\textbf{c}^T \textbf{w}_i \leq \textbf{c}^T \textbf{x}$, følger det, at $\textbf{c}^T \textbf{w}^* \leq \textbf{c}^T \textbf{x}$ for alle $\textbf{x} \in P$, hvormed vektoren $\textbf{w}^*$ er den optimale løsning. 
+Så findes en vektor $\textbf{w}$ med rang$(\textbf{w})=n$, hvormed den er en basal mulig løsning, således at $\textbf{c}^T \textbf{w} \leq \textbf{c}^T \textbf{x}$. 
+Lad $w_1, w_2, \ldots , w_r$ være de basale mulige løsninger i $P$, og lad $\textbf{w}^*$ være en basal mulig løsning, således at $\textbf{c}^T \textbf{w}^* \leq \textbf{c}^T \textbf{w}_i$ for alle $i$. 
+Eftersom der for alle $\textbf{x}$ findes et $i$, således at $\textbf{c}^T \textbf{w}_i \leq \textbf{c}^T \textbf{x}$, følger det, at $\textbf{c}^T \textbf{w}^* \leq \textbf{c}^T \textbf{x}$ for alle $\textbf{x} \in P$, hvormed vektoren $\textbf{w}^*$ er den optimale løsning. 
 \end{proof}\\
 %
 Eftersom ethvert lineært optimeringsproblem kan omskrives til et tilsvarende problem på standardform, kan sætning \ref{thm:optiekstrem2} siges at gælde generelt. 
