Update degenerering_r2.tex, degenerering_r3.tex, and 6 more files...

--- a/fig/tikz/geometri/degenerering_r2.tex
+++ b/fig/tikz/geometri/degenerering_r2.tex
@@ -54,7 +54,7 @@
 \draw[thick] (0,0,0) -- (0,-0.1,0);
 %
 \end{tikzpicture}
-  \captionof{figure}{En polyede med en degenereret basal løsning $A$ i $\R^2$.}
+  \captionof{figure}{Et polyeder med en degenereret basal løsning $\mathbf{x}$ i $\R^2$.}
   \label{fig:mmmm2}
 \end{center}
 %
