--- a/incl/main/simplex_metoden/simplex_metoden.tex
+++ b/incl/main/simplex_metoden/simplex_metoden.tex
@@ -1,4 +1,5 @@
 \chapter{Simplex metoden}
+\label{coronaaaaaaaaaaa}
 Som nævnt tidligere i rapporten, så findes der en optimal løsning til et lineært ligningssystem på standard form, så længe der findes mindst én basal mulig løsning. 
 Simplex metoden benytter sig af denne egenskab og forsøger at finde den optimale løsning. Før simplex metoden bliver præsenteret, skal nogle begreber introduceres.
 %
