--- a/fig/tikz/geometri/degenerering_r3.tex
+++ b/fig/tikz/geometri/degenerering_r3.tex
@@ -54,7 +54,7 @@
 \draw[thick] (0,0,0) -- (0,0,-0.1);
 % 
 \end{tikzpicture}
-  \captionof{figure}{En polyede med en degenereret basal løsning $A$ i $\R^3$.}
+  \captionof{figure}{Et polyeder med en degenereret basal løsning $\mathbf{x}$ i $\R^3$.}
   \label{fig:mmmm3}
 \end{center}
 %
