--- a/incl/main/grafisk_losning/degenerering.tex
+++ b/incl/main/grafisk_losning/degenerering.tex
@@ -1,6 +1,6 @@
 \section{Degenerering}
 % idonnotknow
-Fra definition \ref{defn:basal} vides det, at der skal være $n$ aktive betingelser, for at $\mathbf{x}$ er en basal løsning. 
+Fra definition \ref{defn:basal} fremkommer det, at der skal være $n$ aktive betingelser, for at $\mathbf{x}$ er en basal løsning. 
 Nedenfor defineres tilfælde, hvor der er flere end $n$ aktive betingelser. 
 %
 \begin{defn}{}{}
@@ -13,10 +13,10 @@ En degenereret basal løsning har altså mere end de nødvendige $n$ aktive beti
 I $\R^2$ findes en degenereret løsning i et skæringspunkt af tre eller flere linjer. 
 Til sammenligning findes en degenereret løsning i $\R^3$ i et skæringspunkt af fire eller flere flader. 
 På figur \ref{fig:mmmm2} ses $\mathbf{x}$, som er en degenereret basal løsning i $\R^2$, og på figur  \ref{fig:mmmm3} ses $\mathbf{x}$, som er en degenereret basal løsning i $\R^3$.
-Generelt vil en degenereret løsning dermed opstå i skæringspunktet med mindst $n+1$ hyperplaner i $\R^n$.
+Generelt vil en degenereret løsning opstå i skæringspunktet med mindst $n+1$ hyperplaner i $\R^n$.
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% Flot graf a'la Julie     %%%
+%%% Flot graf alla Julie     %%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \begin{center}
@@ -57,16 +57,18 @@ Betragt et polyeder $\mathcal{P}$ på standardform:
 For $\mathcal{P}$ er $n=3$ dimensionen og $m=2$ aktive betingelser. 
 Løsningen $\mathbf{x}$ kaldes degenereret, hvis flere end $n-m=1$ af komponenterne i $\mathbf{x}$ er lig nul.
 Løsningen $\mathbf{x}= [ \text{ } 0 \text{  } 0 \text{  } 4 \text{ } ]^T $ er en degenereret basal løsning, da der er flere end ét komponent i $\mathbf{x}$, som er lig nul. 
-Derimod er  $\mathbf{x}= [ \text{ } 4 \text{  } 2 \text{  } 0 \text{ } ]^T $ er en basal løsning, da der er kun er ét komponent i $\mathbf{x}$, som er lig nul. 
+Derimod er  $\mathbf{x}= [ \text{ } 4 \text{  } 2 \text{  } 0 \text{ } ]^T $ en basal løsning, da der er kun er ét komponent i $\mathbf{x}$, som er lig $0$. 
 %
 \end{eks}
 % 
 %
 %
-I forbindelse med simplex-metoden har det vist sig at være problematisk med basale løsninger, der er degenererede, hvorfor disse vil forsøges undgået.
+I forbindelse med simplex-metoden har det vist sig at være problematisk med basale løsninger, der er degenererede, hvorfor disse vil forsøges undgået. 
+Dette vil blive belyst i afsnit \ref{coronaaaaaaaaaaa}.
 Ved en mindre ændring $\epsilon$ i en overflødig aktiv betingelse vil en degenereret basal løsning kunne undgås. 
 På figur \ref{fig:jegerikkesyg} ses $\mathbf{a}_1 \mathbf{x} = b_1$, som er en overflødig aktiv betingelse, der medfører en degenereret basal løsning $\mathbf{x}$.
-En lille ændring $\epsilon$ vil ændre den degenererede basale løsning til en basal løsning, hvilket kan ses på figur \ref{fig:mmmjegerikkesyg}, hvor $\mathbf{a}_1 \mathbf{x} = b_1 - \epsilon$.
+En lille ændring $\epsilon$ vil ændre den degenererede basale løsning til en basal løsning, hvilket kan ses på figur \ref{fig:mmmjegerikkesyg}, hvor 
+$\mathbf{a}_1 \mathbf{x} = b_1 - \epsilon$.
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Flot graf alla Julie     %%%
@@ -82,5 +84,5 @@ $
 \end{center}
 %
 %
-I praktiske problemer viser det sig dog ofte, at $A$ og $\mathbf{b}$ har specifikke værdier og dermed er degenererede basale løsninger.
+I praktiske problemer, hvor $A$ og $\mathbf{b}$ har specifikke værdier , viser det sig dog ofte at der opstår degenererede basale løsninger.
 %
