--- a/incl/main/grafisk_losning/poly_std_form.tex
+++ b/incl/main/grafisk_losning/poly_std_form.tex
@@ -3,28 +3,29 @@
 %
 Som beskrevet i afsnit \ref{sec:standard}, kan optimeringsproblemer opskrives på standardform.
 Dette korresponderer med polyeder, der ligeledes kan opskrives på standardform: 
-$\mathcal{P}=\{ \mathbf{x} \in \R^n \mid A\mathbf{x}=\mathbf{b},x \geq 0 \}$, hvor er $A$ er en $m \times n$ matrix.
-$\mathcal{P}$ er her et \textit{polyede på standardform}.
+$\mathcal{P}=\{ \mathbf{x} \in \R^n  \mid  A\mathbf{x}=\mathbf{b}, \mathbf{x} \geq \mathbf{0} \}$, hvor er $A$ er en $m \times n$ matrix.
+$\mathcal{P}$ er her et \textit{polyeder på standardform}.
 I de fleste tilfælde er det en fordel at antage, at de $m$ rækker i $A$ er lineært uafhængige.
-I sætning \ref{something something} vises endvidere, at antagelsen om, at rækkerne er uafhængige, kan foretages, da de svarer til overflødige betingelser, som kan udelades.
-Som det ses i definition \ref{basal}, skal der være $n$ aktive begrænsninger i spil for at finde en basal mulig løsning.
+I sætning \ref{thm:julieerfantalastisk} vises endvidere, at antagelsen om, at rækkerne er uafhængige, kan foretages, da de svarer til overflødige betingelser, som kan udelades.
+Som det ses i definition \ref{defn:basal}, skal der være $n$ aktive begrænsninger i spil for at finde en basal mulig løsning.
 Såfremt $m \neq n$, skal der derfor vælges $n-m$ variable $x_i$ med henblik på, at sætte disse $x_i=0$, hvilket gør begrænsningerne $x_i \geq 0$ aktive.
 %ovenstående 53 i bogen har behov for andre læser så vi kan diskutere hvad det betyder.
 Det er dog ikke uvæsentligt, hvilke af disse variable der omdannes til $0$ hvilket belyses af sætning \ref{thm:polystd}.
 %
 \begin{thm}{}{polystd}
 Ved begrænsningerne $A\mathbf{x}=\mathbf{b}$ og $\mathbf{x}\geq 0$.
-Antag at $A$ er en $m \times n$ matrix og har lineært uafhængige rækker.
+Antag, at $A$ er en $m \times n$ matrix og har lineært uafhængige rækker.
 Vektoren $\mathbf{x} \in \R^n$ er en basal løsning, hvis og kun hvis $A\mathbf{x}=\mathbf{b}$, og der eksisterer indekser $B(1),\ldots,B(m)$, hvorom der gælder følgende:
 \begin{enumerate}[label=(\alph*)]
 \item Søjlerne $\mathbf{A}_{B(1)},\ldots,\mathbf{A}_{B(m)}$ er lineært uafhængige.
-\item Hvis $i \neq \mathbf{A}_{B(1)},\ldots,\mathbf{A}_{B(m)}$, så er $x_i=0$.
+\item Hvis $i \neq B(1),\ldots, B(m)$, så er $x_i=0$.
 \end{enumerate}
 \end{thm}
 \begin{proof}
 Betragt et $x \in \R^n$ og antag, at der eksisterer indekser $\mathbf{A}_{B(1)},\ldots,\mathbf{A}_{B(m)}$, der opfylder (a) og (b).
-Da gælder om de aktive begrænsninger, at $x_i=0$, når $i\neq B(1),\ldots,B(m)$, samt at $A\mathbf{x}=\mathbf{b}$.
-Dette implicerer, da lineært afhængige løsninger sættes lig $0$,  at 
+%
+Det gælder således, at de aktive begrænsninger, at $x_i=0$, når $i\neq B(1),\ldots,B(m)$, samt at $A\mathbf{x}=\mathbf{b}$.
+Dette implicerer, da det forrige gælder,  at 
 %
 $$\sum_{i=1}^{m}\textbf{A}_{B(i)}x_{B(i)}=\sum_{i=1}^{n}\textbf{A}_ix_i=A\textbf{x}=\textbf{b}.$$
 %
@@ -42,7 +43,6 @@ Lad $x_{B_1},\ldots,x_{B_k}$ være ikke-nul komponenter i $\textbf{x}$.
 Eftersom $\mathbf{x}$ er en basal løsning, følger nu, at ligningssysemet givet ved de aktive begrænsninger $x_i=0$, når $i\neq B(1),\ldots,B(k)$, samt  $\sum_{i=1}^{n}\mathbf{A}_ix_i=\mathbf{b}$, har en entydig løsning. 
 Det samme må derfor gøre sig gældende for $\sum_{i=1}^{k}\mathbf{A}_{B(i)}x_{B(i)}=\mathbf{b}$.
 Det følger derfor, at søjlerne i $A_{B(1)},\ldots,A_{B(k)}$ er lineært uafhængige.
-\\\\
 %
 Hvis dette ikke var tilfældet, ville der findes løsninger til $\sum_{i=1}^{k}\mathbf{A}_{B(i)} \lambda_i=\mathbf{0}$ udover den trivielle, hvor $\lambda_i=0$ for $i=1,2,\ldots,k$, hvilket ville betyder, at løsningen $\mathbf{x}$ ikke er entydig. 
 Dette er i modstrid til at denne er en basal løsning.
@@ -66,26 +66,26 @@ Hvis løsningen, der er konstrueret af denne procedure, er ikke-negativ, så er 
 \\\\
 \noindent
 Det bevises nu, at antagelsen om at rækkerne var lineært uafhængige, kunne fortages.
-\begin{thm}{}{}
-Lad $P=\{\textbf{x}|A\textbf{x}=\textbf{b},x\geq 0\}$ være et ikke-tom polyeder, hvor $A$ er en $m \times n$ matrix med rækker $\textbf{a}^{T}_{1},\ldots,\textbf{a}^{T}_{m}$.
+\begin{thm}{}{julieerfantalastisk}
+Lad $P=\{\textbf{x} \mid  A\textbf{x}=\textbf{b},x\geq 0\}$ være et ikke-tom polyeder, hvor $A$ er en $m \times n$ matrix med rækker $\textbf{a}^{T}_{1},\ldots,\textbf{a}^{T}_{m}$.
 Antag, at rang$(A)=k<m$ og at rækkerne $\textbf{a}^T_{i1},\ldots,\textbf{a}^T_{ik}$ er lineært uafhængige. Givet polyederet 
-$$Q=\{x|\textbf{a}^T_{i1}x=b_{i1},\ldots,\textbf{a}^T_{ik}x=b_{ik}, x \geq 0  \}$$ 
+$$Q=\{x \mid \textbf{a}^T_{i1}x=b_{i1},\ldots,\textbf{a}^T_{ik}x=b_{ik}, x \geq 0  \}$$ 
 så er $Q=P$.
 \end{thm}
 \begin{proof}
 Det bevises i tilfældet af $i_1=1,\ldots,i_k=k$, som er tilfældet, hvor de første $k$ rækker er lineært uafhængige. 
 Alle andre tilfælde kan omskrives til dette tilfælde ved rækkeombytning. 
-Det gælder, at $P$ er en delmængde af $Q$, da alle elementer i $P$ opfylder $Q$'s betingelser. 
-Det skal dernæst vises, at $Q$ er en delmængde af $P$.
+Det gælder, at $\mathcal{P}$ er en delmængde af $Q$, da alle elementer i $\mathcal{P}$ opfylder $Q$'s betingelser. 
+Det skal dernæst vises, at $Q$ er en delmængde af $\mathcal{P}$.
 Da rang$(A)=k$, har rækkerummet af $A$ dimension $k$ og et basis bestående af søjlerne $\textbf{a}_1,\ldots,\textbf{a}_k$. 
 Derfor kan kan alle rækker $\textbf{a}_i$ af $A$ blive udtrykt som linearkombination af de andre rækker ved $\textbf{a}_i=\sum^{k}_{j=1}\lambda_{ij}\textbf{a}_j$ for skalarer $\lambda_{ij}$. 
-Lad $x$ være et element i $P$. 
+Lad $x$ være et element i $\mathcal{P}$. 
 Så gælder
 $$b_i=\textbf{a}_ix=\sum^{k}_{j=1}\lambda_{ij}\textbf{a}_jx=\sum^{k}_{j=1}\lambda_{ij}b_j,$$
 for $i=1,\ldots,m.$
 Betragt nu et element $y$ i $Q$. 
-Dette vil også være tilhøre $P$, da
+Dette vil også være tilhøre $\mathcal{P}$, da
 $$ \textbf{a}_iy=\sum^{k}_{j=1}\lambda_{ij}\textbf{a}_jy=\sum^{k}_{j=1}\lambda_{ij}b_j=b_i.$$
-Dermed er det vist, at $Q$ er en delmængde til $P$. 
-Dermed er $Q=P$
+Dermed er det vist, at $Q$ er en delmængde til $\mathcal{P}$. 
+Dermed vist at $Q=\mathcal{P}$, da $\mathcal{P}$ ligeledes er en delmængde af $Q$.
 \end{proof} \\
