Update degenerering_r3.tex, konveks_eks_r3.tex, and 3 more files...

--- a/incl/main/grafisk_losning/Konvekse_maengder.tex
+++ b/incl/main/grafisk_losning/Konvekse_maengder.tex
@@ -31,8 +31,8 @@ Det konvekse hylster af vektorerne er en ret linje, der er markeret med blå.
 %
 \input{fig/tikz/geometri/konveks_eks_r2}
 %
-På figur \ref{fig:neeej} ses derimod tre vektorer $\mathbf{x}$, $\mathbf{y}$ og $\mathbf{z}$ i $\R^n$. 
-Det konvekse hylster af vektorerne er en afgrænset flade, der på figuren er markeret med blå.
+På figur \ref{fig:neeej} ses derimod tre vektorer $\mathbf{x}$, $\mathbf{y}$ og $\mathbf{z}$ i $\R^3$. 
+Det konvekse hylster af vektorerne er på figuren markeret med blå.
 %
 \input{fig/tikz/geometri/konveks_eks_r3}
 %
