--- a/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
@@ -212,7 +212,7 @@ For at finde dennes invers $A^{-1}$ opstilles totalmatricen
 \end{align*}
 Ved at udføre rækkeoperationer omdannes $A$ til reduceret trappeform.
 \begin{align*}
-[A \text{   } | \text{ } I_3] = &
+[A \mid I_3] = &
 \begin{blockarray}{cccccc}
 \begin{block}{[ccc|ccc]}
 1 & 1 & 1 & 1 & 0 & 0 \\
