--- a/fig/tikz/geometri/konveks_eks_r3.tex
+++ b/fig/tikz/geometri/konveks_eks_r3.tex
@@ -31,20 +31,24 @@
 % -------------------------------------------------------
 \filldraw [fill=myblue,opacity=0.3] 
          (b) -- (c) -- (1.7,1.2,1.6) -- cycle;
+\filldraw [fill=myblue,opacity=0.3] 
+         (b) -- (1.7,1.2,1.6) -- (f);
+\filldraw [fill=myblue,opacity=0.3] 
+         (c) -- (1.7,1.2,1.6) -- (f)--(c);
 %
 %
-%% Koordinatssystem
-%% ------------------------------------------------------
-%\draw[thick,->] (0,0,-0.5) -- (1.5,0,-0.5) node[anchor=south east]{$x$};
-%\draw[thick] (0,0,-0.5) -- (-0.2,0,-0.5);
-%\draw[thick,->] (0,0,-0.5) -- (0,0.8,-0.5) node[anchor=north west]{$y$};
-%\draw[thick] (0,0,-0.5) -- (0,-0.2,-0.5);
-%\draw[thick,->] (0,0,-0.5) -- (0,0,0.3) node[anchor=south east]{$z$};
-%\draw[thick] (0,0,-0.5) -- (0,0,-0.8);
-%%
+% Koordinatssystem
+% ------------------------------------------------------
+\draw[thick,->] (0,0,-0.5) -- (1.5,0,-0.5) node[anchor=south east]{$x$};
+\draw[thick] (0,0,-0.5) -- (-0.2,0,-0.5);
+\draw[thick,->] (0,0,-0.5) -- (0,0.8,-0.5) node[anchor=north west]{$y$};
+\draw[thick] (0,0,-0.5) -- (0,-0.2,-0.5);
+\draw[thick,->] (0,0,-0.5) -- (0,0,0.3) node[anchor=south east]{$z$};
+\draw[thick] (0,0,-0.5) -- (0,0,-0.8);
+%
 %
 \end{tikzpicture}
-  \captionof{figure}{Vektorerne $\mathbf{x}$, $ \mathbf{y}$ og $ \mathbf{z}$, og det konvekse hylster af vektorerne, der er markeret med blå.}
+  \captionof{figure}{Vektorerne $\mathbf{x}$, $ \mathbf{y}$ og $ \mathbf{z}$ i $\R^3$, og det konvekse hylster af vektorerne, der er markeret med blå.}
   \label{fig:neeej}
 \end{center}
 %
